# HighSchoolMatch

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: auth.py  chat.py  config.py  database.py  embedding.py  main.py  matching.py  models.py  retrieval.py  schemas.py
backend/app/importers/: schools_xlsx.py  score_rank_xlsx.py
backend/app/routers/: admin.py  public.py
backend/scripts/: seed.py  seed_2025.py
backend/tests/: test_admin.py  test_matching.py
data_source/: 2025年一分档.xlsx  2026年天津高中信息调查表.xlsx  天津市高中数据汇总2025（分区）.xlsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  router.js  styles.css
frontend/src/api/: index.js
frontend/src/components/: SchoolCard.vue  SchoolSheet.vue  TrendChart.vue
frontend/src/views/: ChatView.vue  Home.vue  PublicLayout.vue  SchoolsView.vue  ScoreRank.vue
frontend/src/views/admin/: AdminLayout.vue  Config.vue  Import.vue  Login.vue  Schools.vue
