[project]
name = "highschoolmatch-backend"
version = "0.4.0"
description = "中考志愿填报辅助系统 · 后端 (位次法匹配 + 管理后台)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10",
    "openpyxl>=3.1",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0",
]

[dependency-groups]
# 开发/测试依赖, uv sync 默认会装; 生产可用 `uv sync --no-dev` 跳过
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
